Fixed Project Section Mobile CSS

--- a/src/Components/ProjectSectionD/ProjectSectionD.css
+++ b/src/Components/ProjectSectionD/ProjectSectionD.css
@@ -105,21 +105,28 @@
         margin-top: 0px;
         margin-left: 20px;
         margin-right: 20px;
-
-        justify-content: center;
-        align-items: center;
     }
     .pd-right-image-container{
-        width: 250px;
+        height: auto;
+        width: inherit;
+        min-height: 0;
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 20px;
+    }
+    .right-test-image{
         height: 300px;
-
-        margin-top: 30px;
-        margin-bottom: 20px;
+        width: 300px;
+        background-color: #c1fbb0;
+        border: 10px solid green;       
     }
   
     .pd-left-container{
         height: auto;
         width: 100%;
+        min-height: 0;
 
         margin-top: 0px;
         margin-left: 20px;
@@ -130,7 +137,7 @@
         justify-content: center;
     }
     .pd-info-container{
-        
+        padding-top: 20px;
         right: 0;
         width: 100%;
         margin-left: 20px;
